# ClAudit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  claudit.py  claudit_gui.py  claudit_scan.py  pyproject.toml  requirements.txt  scrub.txt.example
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  defend.yml  poll.yml
docs/: counter-history.json  counter.json  index.html  pattern-report.md  poll.json
scripts/: gen-icon.py  install-linux.sh  pattern_report.py  render_poll.py
scripts/githooks/: pre-commit
skills/claudit/: SKILL.md
tests/: test_claudit.py
